--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "red-pen-extension",
   "version": "1.0.0",
-  "description": "",
+  "description": "Open-source browser extension to style check your writing",
   "homepage": "https://github.com/dbkaplun/red-pen-extension",
   "repository": "https://github.com/dbkaplun/red-pen-extension",
   "bugs": "https://github.com/dbkaplun/red-pen-extension/issues",
